package com.musicplayer.command;

public class AddTrackPCommand implements Command{

    @Override
    public void execute() {
        // TODO: implementare quando verrà gestito l'undo dell'aggiunta alla playlist
    }

    @Override
    public void undo() {
        // TODO: implementare quando verrà gestito l'undo dell'aggiunta alla playlist
    }
}
