package com.musicplayer.command;

public interface Command {
        void execute();
        void undo();
}
