package com.musicplayer.command;

public class DeleteTrackCommand implements Command{
    @Override
    public void execute() {
        // TODO: implementare quando verrà gestito l'undo dell'eliminazione dal catalogo
    }

    @Override
    public void undo() {
        // TODO: implementare quando verrà gestito l'undo dell'eliminazione dal catalogo
    }
}
