package com.musicplayer.model;

import java.util.List;

public class Library {
    private List<Track> allTracks;
    private List<Playlist> allPlaylists;

}
