package com.musicplayer.model;

public enum PlayMode {
    SEQUENTIAL, SHUFFLE , LOOP
}
