package com.musicplayer.model;

public enum Tag {
    FAV,EXPLICIT,NEW
}
