package com.musicplayer.model.engine;

public class LoopPlay implements PlayStrategy{
}
