package com.musicplayer.model.engine;

public interface PlayStrategy {
}
