package com.musicplayer.model.engine;

public interface PlayerObserver {
    void update(MediaPlayerEngine engine);
}
