package com.musicplayer.model.engine;

public class SequentialPlay implements PlayStrategy{
}
