package com.musicplayer.model.engine;

public class ShufflePlay implements PlayStrategy {
}
